// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseText 値がDOMに反映されているか(useType: card) 1`] = `
"<div>
  <p class=\\"base-text base-text--card\\">ダミーテキスト</p>
</div>"
`;

exports[`BaseText 値がDOMに反映されているか(useType: nav) 1`] = `
"<div>
  <p class=\\"base-text base-text--nav\\">ダミーテキスト</p>
</div>"
`;

exports[`BaseText 値がDOMに反映されているか(useType: none) 1`] = `
"<div>
  <p class=\\"base-text base-text--none\\">ダミーテキスト</p>
</div>"
`;
